--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/lodash": "^4.14.195",
+    "@types/passport-strategy": "^0.2.35",
+    "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-headerapikey": "^1.2.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
